[package]
name = "raydium-trade-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.26"
serde_json = "1.0.140"
solana-sdk = "2.2.1"
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.12.3"
tonic-health = "0.12.3"
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"
solana-account-decoder = "^2.2.1"
bs58 = "0.5.1"
serde = "1.0.219"
solana-client = "2.2.3"
spl-token = "7.0.0"
borsh = "1.5.5"
borsh-derive = "1.5.5"
spl-associated-token-account = "6.0.0"
reqwest = { version = "0.12.14", features = ["json"] }
chrono = "0.4.40"
colored = "3.0.0"
thiserror = "2.0.12"
pyth-hermes-client = "0.3.1"
bincode = "1.3"
bs64 = "0.1.2"
solana-transaction-status = "2.2.3"
bigdecimal = "0.4.7"
bytemuck = "1.22.0"
mpl-token-metadata = "5.1.0"
spl-token-metadata = "0.0.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "pre_start"
path = "src/pre_start.rs"

[[bin]]
name = "ping"
path = "src/ping.rs"

[[bin]]
name = "sig"
path = "src/sig.rs"